Rename project to tenama + implemented namespace cleanup logic
