# .docs/api/openapi.yaml
@@ -1,30 +1,41 @@
 openapi: 3.0.1
 info:
   contact:
-    url: https://github.com/Payback159/tempido/issues/new
-  description: "Tempido provides a simple REST API to enable non-cluster-admins to\
-    \ create temporary namespaces. Tempido takes care of the creation, management\
+    url: https://github.com/Payback159/tenama/issues/new
+  description: "Tenama provides a simple REST API to enable non-cluster-admins to\
+    \ create temporary namespaces. tenama takes care of the creation, management\
     \ and cleanup of the temporary namespaces."
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-  title: Tempido
+  title: Tenama
   version: 0.1.0
 servers:
 - url: /
 tags:
 - externalDocs:
     description: Find out more
-    url: https://github.com/Payback159/tempido
+    url: https://github.com/Payback159/tenama
   name: Documentation
 - description: Everything about your temporarily namespaces
   name: Namespaces
 paths:
-  /version:
+  /docs:
     get:
-      operationId: getVersion
+      operationId: getDocumentation
       responses:
         "200":
+          content:
+            text/html:
+              schema:
+                example: |-
+                  <html>
+                  <head>
+                  </head>
+                  <body>
+                  </body>
+                  </html>
+                type: string
           description: successful operation
       summary: Outputs the openAPI specification
       tags:
@@ -40,6 +51,12 @@ paths:
         description: Namespace object that needs to be added to the cluster
         required: true
       responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: string
         "401":
           description: Authentication information is missing or invalid
           headers:
